# microbit-maze-workshop

./: README.md  pyproject.toml
microbit_maze_workshop/: cutebot.py  main.py
src/: main.py
src/cutebot-gyro/: gyro.py  main.py
src/cutebot-timing/: cutebot.py  direction.py  main.py  march.py
src/cutebot-timing/microbit/: i2c.py
